<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">壹步达</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="error_network">网络异常，请检查网络情况!</string>
    
     <!-- alertDialog -->
    <string name="yes">确定</string>
    <string name="no">取消</string>

    <string name="developing">功能开发中!</string>
    <!-- tittle values -->
    <string name="tittle_denglu">登录</string>
    <string name="tittle_yanZheTel">验证手机</string>
    <string name="tittle_shanSong">壹步达</string>
    <string name="tittle_myShanSong">我的闪送</string>
    <string name="tittle_setup">设置</string>
    <string name="tittle_more">更多</string>
    <string name="tittle_foundPwd">找回密码</string>
    <string name="tittle_yunsongVipBook">壹步达会员手册</string>
    <string name="tittle_invitationShoper">邀请商户</string>
    <string name="tittle_order_Today">壹步达待抢单</string>

    <!-- hint   提示 -->
    <string name="hint_phone">输入手机号码</string>
    <string name="hint_pwdnum">输入密码</string>
    <string name="hint_userCrad">输入身份证号码</string>
    <string name="hint_newPwd">输入新密码</string>
    <string name="hint_alignNewPwd">重新输入新密码</string>
    <string name="hint_registeredCode">输入你的验证码</string>
    <string name="hint_Checkpwd">确认登陆密码</string>

    <!-- Page   loginning values -->
    <string name="denglu_TelNum">手机号码</string>
    <string name="denglu_PwdNum">密码:</string>
    <string name="denglu_foundPwd">找回密码</string>
    <string name="denglu_userAgreement_ago">点击登录按钮表示您已同意</string>
    <string name="denglu_userAgreement">《壹步达专员.用户协议》</string>
    <string name="denglu_EquipmentNum">当前设备号:</string>
    <string name="denglu_userNum">账号:</string>

    <!-- Page  foundPwd   找回密码 -->
    <string name="foundpwd_useNum">身份证：</string>
    <string name="foundpwd_tel">手机：</string>
    <string name="foundpwd_pwd">密码：</string>
    <string name="foundpwd_checkpwd">确认密码：</string>

    <!-- Page  registered 验证手机 -->
    <string name="registered_Tel">手机:</string>
    <string name="registered_yanzhengma">验证码：</string>
    <string name="registered_pwd">密码：</string>
    <string name="registered_checkpwd">确认密码：</string>

    <!-- Page    HomePage -->
    <string name="homepage_Date">08-15 星期六</string>
    <string name="homepage_Over">完成</string>
    <string name="homepage_Income">今日收入</string>
    <string name="homepage_orderToDay">今日已抢订单</string>
    <string name="homepage_txt_Map">上海市黄浦区陆家浜路1382弄-43号</string>

    <!-- Page    RecommendedActivity -->
    <string name="Recommended_tittle">壹步达-极速响应，闪电送达</string>

    <!-- Page    SetUpActivity -->
    <string name="setup_OrderRemind">新的订单提醒</string>
    <string name="setup_Sound">声音</string>
    <string name="setup_Vibration">震动</string>
    <string name="setup_Orderup">抢单设置</string>
    <string name="setup_OrderCheck">点击抢单时确认</string>
    <!-- Page    Update -->
    <string name="update_Map">当前位置:</string>
    <string name="update_Nowaddress">上海市浦东新区</string>
    <string name="update_serverAddress">服务器位置</string>
    
    <!-- Page    OrderItem  今日订单  item  -->
    <string name="orderItem_FuhaoM">￥</string>
    <string name="orderItem_fuhaoZ">/</string>
    <string name="orderItem_Distance">公里</string>
    <string name="orderItem_Height">公斤</string>
    <string name="orderItem_Strat">这是起点。  哪里哪里哪里来着</string>
    <string name="orderItem_End">这是重点。 哪里哪里哪里来着</string>
    
    

    <!-- button  values -->
    <string name="btn_login">登录</string>
    <string name="btn_registrationUser">壹步达专员报名</string>
    <string name="btn_OrderByToday">今日订单</string>
    <string name="btn_Vehicle">汽车</string>
    <string name="btn_Submit">提交</string>
    <string name="btn_VerificationCode">发送验证码</string>
    <string name="btn_updateMap">更新位置</string>
    <string name="btn_recommended">发送邀请码</string>
    <string name="btn_check">确定</string>
    <string name="btn_sendMessage">推送问题检测</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_activity_manual">ManualActivity</string>
    <string name="title_activity_common_problem">CommonProblemActivity</string>
    <string name="title_activity_home_fragment">HomeFragment</string>
    <string name="title_activity_text">TextActivity</string>
    <string name="title_activity_found_pwd">FoundPwdActivity</string>
    <string name="title_activity_registered">RegisteredActivity</string>
    <string name="title_activity_item_user_manual">ItemUserManualActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_recommended">RecommendedActivity</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="title_activity_update_map">UpdateMapActivity</string>
    
    <string name="login_reg_txt_yzm_reciprocal">%s 秒后重新获取</string>
    
    <!-- Register -->
    <string name="registercontent">如果长时间获取不到验证码，可拨打客服电话</string>
     <string name="servicephone">4007759697</string>  
<!--    <string name="servicephone">021-62521208</string> 
 -->    
</resources>
