<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateMapActivity" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <com.amap.api.maps.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="400dp" >
        </com.amap.api.maps.MapView>
        <ImageView
            android:id="@+id/img_update_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/arrow_03" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        >
        <!-- btn  推送问题检测 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/brg_wirte"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/send_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/shape_son"
                android:text="@string/btn_sendMessage"
                android:textColor="@color/brg_wirte" />
        </LinearLayout>
        <!-- 当前位置 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/update_Map" />

                <Button
                    android:id="@+id/btn_updateMap"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/shape_yesslow"
                    android:text="@string/btn_updateMap"
                    android:textColor="@color/brg_wirte"
                    android:textSize="14dp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txt_nowAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/update_Nowaddress" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>